add rest of changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
         unde!
       </h1>
+
+      <h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, sint.
+      </h2>
+
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique
         facere eum, in repellendus unde odio corrupti facilis esse sint porro
