set anchors to inherit and box-sizing to border-box

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <main>
       <h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
-        unde!
+        <a href="">dolor sit</a>
+        Lorem ipsum amet consectetur adipisicing elit. Similique, unde!
       </h1>
 
       <h2>
